# bluez-alsa

utils/aplay/: Makefile.am  alsa-pcm.h  aplay.c
utils/rfcomm/: Makefile.am
